@@ -12,3 +12,6 @@
 8.  lcd-daemon.c: prevent row number to be greater than rows supported by LCD
 - 21/04/2024
 9.  added notify-daemon.c, pinotify.c
+- 18/02/2025
+10. Added -T argument, DISPLAY_TIMEOUT env variable for the time in seconds
+    notify-send will display message.
